# FriendlyGeek

./: CMakeLists.txt  README.md
Driver/: CMakeLists.txt  FriendlyGeekEngine.cpp  FriendlyGeekEngine.h
FriendlyGeekEngine/: CMakeLists.txt
FriendlyGeekEngine/include/: Game.hpp
FriendlyGeekEngine/include/Components/: Component.hpp  ComponentHandle.hpp
FriendlyGeekEngine/include/Entities/: Entity.hpp  EntityHandle.hpp  EntityMap.hpp
FriendlyGeekEngine/include/Events/: Event.hpp  EventBus.hpp
FriendlyGeekEngine/include/Managers/: ComponentManager.hpp  EntityManager.hpp
FriendlyGeekEngine/include/Systems/: AudioSystem.hpp  System.hpp
